# TaskFlow-Platform

./: .env.shared.example  .pre-commit-config.yaml  .secrets.baseline  docker-compose.yaml  file::memory:  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
apps/analytic-service/: pyproject.toml
apps/analytic_service/: pyproject.toml
apps/analytic_service/src/analytic_service/: main.py  router.py
apps/analytics_service/: pyproject.toml
apps/analytics_service/src/analytics_service/: main.py  router.py
apps/api-gateway/: pyproject.toml
apps/api_gateway/: pyproject.toml
apps/api_gateway/src/api_gateway/: config.py  main.py  router.py
apps/api_gateway/tests/api_gateway/: conftest.py  test_health.py  test_task.py
apps/notification-service/: pyproject.toml
apps/notification_service/: pyproject.toml
apps/notification_service/src/notification_service/: baseNotificationProvider.py  config.py  emailProvider.py  email_provider.py  main.py  queue_utils.py  router.py  worker.py
apps/notification_service/tests/notification_service/: conftest.py  test_health.py  test_notification.py  test_providers.py  test_queue.py
apps/task-service/: pyproject.toml
apps/task_service/: alembic.ini  file::memory:  pyproject.toml
apps/task_service/migrations/: env.py
apps/task_service/migrations/versions/: 92f7be1ee498_initial_revision.py  fcb29e0c1e5f_make_author_id_nullable.py
apps/task_service/src/task_service/: config.py  dependecies.py  help_func.py  main.py  orm_utils.py  router.py  task_models.py  task_schemes.py
apps/task_service/tests/task_service/: conftest.py  test_router.py
apps/user_service/: .coverage  pyproject.toml
apps/user_service/migrations/: env.py
apps/user_service/migrations/versions/: 6fbaf1db2873_initial_revision.py
apps/user_service/src/user_service/: config.py  dependencies.py  main.py  orm_utils.py  password_utils.py  router.py  token_utils.py  user_models.py  user_schemes.py
apps/user_service/tests/: conftest.py  test_auth.py  test_bd.py  test_health.py  test_users.py
apps/user_service/tests/user_service/: conftest.py  test_auth.py  test_bd.py  test_health.py  test_users.py
docker/: grafana-datasource.yaml  init-db.sql  loki-config.yaml  postgres-init.sh  prometheus.yaml  promtail-config.yaml  python-service.Dockerfile  user-service.Dockerfile
libs/common/: pyproject.toml
libs/common/common/: logger_config.py
libs/common/src/common/: config.py  logger_config.py
libs/common/src/common/models/: models.py
