[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi >=0.104.0",
    "uvicorn[standard] >=0.24.0",
    "python-jose[cryptography] >=3.3.0",
    "bcrypt >=1.7.4", 
    "httpx >=0.25.0",
    "redis >=5.0.0",
    "slowapi >=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "pytest-asyncio >=0.21.0",
    "pytest-cov >=4.0.0",
    "httpx >=0.25.0",
]

[tool.hatch.build]
include = ["src/api_gateway"]

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"