[project]
name = "notification-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi >=0.104.0",
    "uvicorn[standard] >=0.24.0",
    "redis >=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "pytest-asyncio >=0.21.0",
    "pytest-cov >=4.0.0",
    "httpx >=0.25.0",
]

[tool.hatch.build]
include = ["src/notification_service"]

[tool.hatch.build.targets.wheel]
packages = ["src/notification_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"