[project]
name = "task-service"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "common >=0.1.0",       
]

[tool.uv.dependencies]
fastapi = ">=0.104.0"
httpx = ">=0.25.0"
sqlalchemy = ">=2.0.45"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
structlog = ">=23.0.0"
python-dateutil = ">=2.8.0"

[tool.uv.dependencies.testing]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
httpx = ">=0.25.0"

[tool.uv.dependencies.dev]
ruff = ">=0.1.0"
pre-commit = ">=3.0.0"
mypy = ">=1.0.0"

[tool.uv.dependencies.docs]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
