[project]
name = "user_service" 
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "common >=0.1.0",
    "fastapi >=0.104.0",
    "uvicorn[standard] >=0.24.0",
    "python-jose[cryptography] >=3.3.0",
    "passlib[bcrypt] >=1.7.4",
    "tortoise-orm[asyncpg] >=0.20.0",
    "sqlalchemy >=2.0.0",
    "aerich >=0.7.0",
    "httpx >=0.25.0",
    "PyJWT >=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["user_service"]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--tb=short -v"